book-playground/ch07/_exercises/app-stack.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: todo
    tier: frontend
  name: frontend
  namespace: app-stack
spec:
  containers:
    - image: nginx
      name: frontend
  restartPolicy: Never
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: todo
    tier: backend
  name: backend
  namespace: app-stack
spec:
  containers:
    - image: nginx
      name: backend
  restartPolicy: Never
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: todo
    tier: database
  name: database
  namespace: app-stack
spec:
  containers:
    - image: mysql
      name: database
  dnsPolicy: ClusterFirst
  restartPolicy: Never
